fix(reliability): batch 2 — null-safety guards (S2259, 8 issues)
Tighten 8 NPE-risk sites flagged by Sonar:

- PortfolioWatchlistMarketEnricher.enrichStockLike now early-returns
  on null/blank symbol before calling toUpperCase() (was a real WILL
  be thrown according to Sonar's dataflow).
- GroqChatClient.parseRetryMs hoists e.getResponseHeaders() into a
  local var so the null check covers the actual access.
- RasyonetFundClient does the same for response.getHeaders()
  .getContentType().
- YahooChartClient.encodePathSegment guards UriComponentsBuilder
  .getPath() before substring(1).
- KeycloakRealmRoleService.extractErrorDetail returns a sentinel when
  the exception argument itself is null.
- NewsHtmlUtil.decodeEntities now returns "" (not null) on null input,
  which also fixes the consumer at ArticleContentFetcher line 304.
- NewsAggregatorService swaps Collectors.toList() for the Java 16+
  Stream#toList() (non-null guaranteed, immutable).

Verified: mvn verify still 140 unit + 2 IT, 0 failures.